--- a/app/src/main/res/layout/question_eleven.xml
+++ b/app/src/main/res/layout/question_eleven.xml
@@ -32,8 +32,8 @@
 
     <RadioGroup
         android:id="@+id/q11rgp1"
-        android:layout_width="250dp"
-        android:layout_height="410dp"
+        android:layout_width="249dp"
+        android:layout_height="246dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
@@ -45,6 +45,7 @@
             android:id="@+id/q11rb1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="Male"
             android:textSize="20sp" />
 
@@ -63,7 +64,7 @@
         android:layout_height="38dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="577dp"
+        android:layout_marginTop="453dp"
         android:background="@color/colorAccent"
         android:gravity="center"
         android:onClick="next11"
