--- a/app/src/main/res/layout/question_nine.xml
+++ b/app/src/main/res/layout/question_nine.xml
@@ -33,19 +33,21 @@
 
     <RadioGroup
         android:id="@+id/q9rgp1"
-        android:layout_width="250dp"
-        android:layout_height="410dp"
+        android:layout_width="249dp"
+        android:layout_height="283dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="74dp"
         android:layout_marginTop="185dp"
+
         android:orientation="vertical">
 
         <RadioButton
             android:id="@+id/q9rb1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="Appearance"
             android:textSize="20sp" />
 
@@ -78,7 +80,7 @@
         android:layout_height="38dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="577dp"
+        android:layout_marginTop="511dp"
         android:background="@color/colorAccent"
         android:gravity="center"
         android:onClick="next9"
