--- a/app/src/main/res/layout/question_one.xml
+++ b/app/src/main/res/layout/question_one.xml
@@ -33,12 +33,13 @@
 
     <RadioGroup
         android:id="@+id/q1rgp1"
-        android:layout_width="272dp"
-        android:layout_height="435dp"
+        android:layout_width="260dp"
+        android:layout_height="276dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="74dp"
         android:layout_marginTop="181dp"
+
         android:orientation="vertical">
 
         <RadioButton
@@ -46,44 +47,51 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:checked="true"
             android:text="Iphone"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q1rb2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nokia"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q1rb3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Samsung"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q1rb4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="MI"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q1rb5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lenovo"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q1rb6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sony"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q1rb7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Others"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </RadioGroup>
 
     <Button
@@ -92,7 +100,7 @@
         android:layout_height="38dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="577dp"
+        android:layout_marginTop="485dp"
         android:background="@color/colorAccent"
         android:gravity="center"
         android:onClick="next1"
