--- a/app/src/main/res/layout/question_ten.xml
+++ b/app/src/main/res/layout/question_ten.xml
@@ -32,8 +32,8 @@
 
     <RadioGroup
         android:id="@+id/q10rgp1"
-        android:layout_width="250dp"
-        android:layout_height="410dp"
+        android:layout_width="244dp"
+        android:layout_height="343dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
@@ -45,6 +45,7 @@
             android:id="@+id/q10rb1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="under 18"
             android:textSize="20sp" />
 
@@ -78,7 +79,7 @@
         android:layout_height="38dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="577dp"
+        android:layout_marginTop="527dp"
         android:background="@color/colorAccent"
         android:gravity="center"
         android:onClick="next10"
