--- a/app/src/main/res/layout/question_three.xml
+++ b/app/src/main/res/layout/question_three.xml
@@ -34,8 +34,8 @@
 
     <RadioGroup
         android:id="@+id/q3rgp1"
-        android:layout_width="272dp"
-        android:layout_height="435dp"
+        android:layout_width="260dp"
+        android:layout_height="263dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="74dp"
@@ -47,26 +47,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:checked="true"
             android:text="2G"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q3rb2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3G"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q3rb3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4G"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q3rb4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Others"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
 
     </RadioGroup>
@@ -77,7 +81,7 @@
         android:layout_height="38dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="577dp"
+        android:layout_marginTop="506dp"
         android:background="@color/colorAccent"
         android:gravity="center"
         android:onClick="next3"
