--- a/app/src/main/res/layout/question_twelve.xml
+++ b/app/src/main/res/layout/question_twelve.xml
@@ -34,8 +34,8 @@
 
     <RadioGroup
         android:id="@+id/q12rgp1"
-        android:layout_width="250dp"
-        android:layout_height="410dp"
+        android:layout_width="257dp"
+        android:layout_height="187dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
@@ -47,6 +47,7 @@
             android:id="@+id/q12rb1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="I haven't got a job"
             android:textSize="20sp" />
 
@@ -86,7 +87,7 @@
         android:layout_height="38dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="577dp"
+        android:layout_marginTop="423dp"
         android:background="@color/colorAccent"
         android:gravity="center"
         android:onClick="next12"
