--- a/app/src/main/res/layout/question_two.xml
+++ b/app/src/main/res/layout/question_two.xml
@@ -32,12 +32,13 @@
 
     <RadioGroup
         android:id="@+id/q2rgp1"
-        android:layout_width="272dp"
-        android:layout_height="435dp"
+        android:layout_width="265dp"
+        android:layout_height="241dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="74dp"
         android:layout_marginTop="181dp"
+
         android:orientation="vertical">
 
         <RadioButton
@@ -45,32 +46,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:checked="true"
             android:text="Under 1000"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q2rb2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1000-1999"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q2rb3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2000-2999"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q2rb4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3000-3999"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <RadioButton
             android:id="@+id/q2rb5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="More than 40000"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
     </RadioGroup>
 
@@ -80,7 +86,7 @@
         android:layout_height="38dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="577dp"
+        android:layout_marginTop="496dp"
         android:background="@color/colorAccent"
         android:gravity="center"
         android:onClick="next2"
