--- a/app/src/main/res/layout/finish_survey.xml
+++ b/app/src/main/res/layout/finish_survey.xml
@@ -11,10 +11,10 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="299dp"
-        android:layout_height="237dp"
+        android:layout_width="match_parent"
+        android:layout_height="285dp"
         android:layout_alignParentTop="true"
-        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="200dp"
         android:src="@drawable/yukii" />
 
@@ -55,7 +55,7 @@
         android:layout_height="38dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="483dp"
+        android:layout_marginTop="510dp"
         android:gravity="center"
         android:onClick="finish"
         android:text="FINISH"
