--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -70,11 +70,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColor="#000000"
+        android:layout_marginTop="443dp"
         android:gravity="center"
-        android:layout_marginTop="507dp"
-        android:textSize="20sp"
-        android:text="I accept these requests" />
+        android:text="I accept these requests"
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/start"
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="577dp"
+        android:layout_marginTop="510dp"
         android:background="@color/colorAccent"
         android:gravity="center"
         android:onClick="Welcome"
